[refactor] common deopt for all backends