@@ -454,6 +454,8 @@
                                 </arg>
                                 <arg>--add-exports</arg>
                                 <arg>jdk.internal.vm.compiler/org.graalvm.compiler.word=tornado.drivers.common</arg>
+                                <arg>--add-exports</arg>
+                                <arg>jdk.internal.vm.compiler/org.graalvm.compiler.phases.util=tornado.drivers.common</arg>
                                 <!-- OpenCL exports-->
                                 <arg>--add-opens</arg>
                                 <arg>java.base/java.lang=tornado.drivers.opencl</arg>
